www/css/index.css
body, .page {
	background:#AACCFF;
	background-attachment:fixed;
	background-image: -webkit-radial-gradient(50% 90% at 50% 50%, #EEF6FF 0%, #AACCFF 100%); /* Safari 5.1 to 6.0 */
	background-image: -o-radial-gradient(50% 90% at 50% 50%, #EEF6FF 0%, #AACCFF 100%); /* For Opera 11.6 to 12.0 */
	background-image: -moz-radial-gradient(50% 90% at 50% 50%, #EEF6FF 0%, #AACCFF 100%); /* For Firefox 3.6 to 15 */
	background-image: radial-gradient(50% 90% at 50% 50%, #EEF6FF 0%, #AACCFF 100%); /* Standard syntax (must be last) */
}
body{
	font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
	font-size:100%;
	height:100%;
	margin:0px;
	padding:0px;
	width:100%;
	/* prevent callout to copy image, etc when tap to hold */
	-webkit-touch-callout: none;	
	/* prevent webkit from resizing text to fit */
	-webkit-text-size-adjust: none;
	/* prevent copy paste, to allow, change 'none' to 'text' */
	-webkit-user-select: none;
}
* {
    -webkit-tap-highlight-color: rgba(0,0,0,0);
}

/* Portrait */
#home{width:100%;padding:0px;margin:0px;}
.page{
	width:100%;
	height:100%;
	top:0px;
	right:0px;
	bottom:0px;
	left:0px;
	position:absolute;
	text-align:center;
}

/* Landscape 
@media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {

}
*/
h1 {
    font-size:3em;
    font-weight:normal;
    margin:100px 0px 0px 0px;
    overflow:visible;
    padding:0px;
    text-align:center;
    width:auto;
    display:inline-block;
}
/*
h1 span{display:inline-block;}

@media screen and (min-aspect-ratio: 1/1) and (max-width:400px) {
	h1{font-size:9em;}
}
*/
.c1{color:#CC0000;}
.c2{color:#009900;}
.c3{color:#6666FF;}
.c4{color:#DDDD00;}
.c5{color:#CC66FF;}
.c6{color:#990000;}
#gameboard{
	display:none;
} /* 4499FF */
h1, #d{
	display:inline-block;
	text-shadow:1px 1px 3px #666;
}
#em{
  display:none;
  line-height:1;
  font-family:"Fixedsys Excelsior", Inconsolata, Courier, "Robot Mono";
}
#letters{
  position:absolute;
  top:3em;
  bottom:4.5em;
  width:100%;
  line-height:1;
  font-family: "Fixedsys Excelsior", Inconsolata, Courier, "Robot Mono";
}
#d{
/*	position: relative;
	top: 50%;
	-webkit-transform: translateY(-50%);
	transform: translateY(-50%);
*/	-webkit-transition:	all 600ms easing's Bezier curve;
	transition:		all 600ms easing's Bezier curve; 
}
#d span{
	font-size:inherit;
}
#start, #end, #trigger{
	border-radius:0.3em;
	padding:0.5em 0.9em;
	font-size:1.2em;
	font-weight:900;
}
#start{
	background-color: #FFCC66;
}
#trigger{
	background: #AA3300;
	color:#FFF;
	border:3px solid #FFF;

	-webkit-transition: background-image 0.25s ease-in-out, transform 0.25s;
	-moz-transition: background-image 0.25s ease-in-out, transform 0.25s;
	-o-transition: background-image 0.25s ease-in-out,  transform 0.25s;
	-ms-transition: background-image 0.25s ease-in-out, transform 0.25s;
	transition: background-image 0.25s ease-in-out, transform 0.25s;

	padding-right:2em;
	padding-left:2em;	
	position:fixed;
	bottom:1em;
	left:50%;
	margin-left:-3.5em;
}
#trigger.pull_trigger{
	background: #333333;
	-webkit-transform: rotate(360deg);
	-moz-transition: rotate(360deg);
	-o-transition: rotate(360deg);
	-ms-transition: rotate(360deg);
	transform: rotate(360deg);
}

#end{position:fixed;top:0.5em;right:0.5em;}
.option{font-size:1.2em;text-align:left;margin:2em auto;width:90%;padding:0px 5%;}
.option .description{padding-left:0.5em;}
.checkbox{
width:1em;
font-size: 1em;
height:1em;
display:inline-block;
border:2px outset #ccc;
background:#fff;
float:left;
margin-right:0.7em;
}
.checked .checkbox{
	background:#33BB33;
	border:1px solid #999;
	text-align:center;
	font-size: 1.5em;
	width: 1.2em;
	height: 1.2em;
	border-radius:0.8em;
	margin-right:0px;
}
.checked .checkbox:after{
 content: "✔";
}


@keyframes fade {
    from { opacity: 1.0; }
    50% { opacity: 0.2; }
    to { opacity: 1.0; }
}
@-webkit-keyframes fade {
    from { opacity: 1.0; }
    50% { opacity: 0.2; }
    to { opacity: 1.0; }
}
.blink {
    animation:fade 2800ms infinite;
    -webkit-animation:fade 2800ms infinite;
}

